--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -52,7 +52,7 @@ body {
 
 /* Add an active class to the active dropdown button */
 .active {
-  background-color: green;
+  background-color: #05728f;
   color: white;
 }
 
