--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse ">
   <div class="container-fluid">
     <div class="navbar-header" layout:fragement="content">
-      <a class="navbar-brand" href="/chat" th:text="${user.username}"></a>
+      <a class="navbar-brand" th:href="@{/profile(id=${user.id})}" th:text="${session.user.username}"></a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/chat">Home</a></li>
