--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -7,6 +7,8 @@ body {
 .navbar {
 	margin-bottom: 0;
 	border-radius: 0;
+	position: fixed;
+	width: 100%;
 }
 
 /* Fixed sidenav, full height */
@@ -20,6 +22,7 @@ body {
   background-color: #111;
   overflow-x: hidden;
   padding-top: 20px;
+  margin-top: 50px;
 }
 
 /* Style the sidenav links and the dropdown button */
@@ -79,6 +82,7 @@ body {
 	margin-left: -10px;
 	bottom: 0;
 	position: fixed;
+	width: -moz-available;
 }
 
 .container{max-width:1170px; margin:auto;}
@@ -176,6 +180,7 @@ img{ max-width:100%;}
   height: 100%;
   /* margin-right: 20px; */
   width: 100%;
+  margin-top: 50px;
 }
 
 .incoming-msg{
