--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -8,6 +8,13 @@
  <script th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
  <link rel="stylesheet" href="css/search.css" type="text/css"/>
 <title>Search People</title>
+<script type="text/javascript">
+$(document).on("click", "#openModal", function () {
+    var id = $(this).data('id');
+    $(".list-group #userId").val(id);
+    console.log(id);
+});
+</script>
 </head>
 <body>
 	
@@ -31,7 +38,12 @@
 	<div th:if="${param.found}">
 		<h1>Not found</h1>
 	</div>
-	
+	<div th:if="${param.exists}">
+		<p class="alert alert-danger">Chat with this user already exists</p>
+	</div>
+	<div th:if="${param.existsInGroup}">
+		<p class="alert alert-danger">Chosen user already exists in this group</p>
+	</div>
 	<div class="list-group">
 		<th:block th:each="user : ${users}">
 			<form class="list-group-item clearfix" action="/newchat" >
@@ -42,10 +54,42 @@
 				</div>
 				<span class="pull-right">
 					<button type="submit" name="id" th:value="${user.id}" class="btn btn-primary btn-md">New chat</button>
+	 				<button type="button" id="openModal" class="btn btn-primary btn-md" th:attr="data-id=${user.id}" data-toggle="modal" data-target="#myModal">Add to Group</button>
 				</span>
 			</form>
 		</th:block>
 	</div>
+	
+	<!-- Modal -->
+ 	<div class="modal fade" id="myModal" role="dialog">
+	   <div class="modal-dialog">
+	   
+	     <!-- Modal content-->
+	     <div class="modal-content">
+	       <div class="modal-header">
+	         <button type="button" class="close" data-dismiss="modal">&times;</button>
+	         <h4 class="modal-title">Add to Group</h4>
+	       </div>
+	       <div class="modal-body">
+	         
+	         	<ul class="list-group">
+         			<th:block th:each="groupChat : ${groupChats}">
+       					<form class="text-center" method="POST" action="/addToGroup">
+         					<input type="text" name="groupId" th:value="${groupChat.id}" hidden="true"/>
+         					<input type="text" id="userId" name="userId" value="" hidden="true"/>
+					 		<button type="submit" class="list-group-item" value="" th:text="${groupChat.name}">Group Name</button>
+	 		         	</form>
+         			</th:block>	
+				</ul>
+
+	       </div>
+	       <div class="modal-footer">
+	         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	       </div>
+	     </div>
+	     
+	   </div>
+ 	</div>	
 
 </body>
 </html>
